PICA: general changes #163