@@ -30,14 +30,12 @@ public class FormatterTest extends CliTestUtils {
   public void setUp() throws Exception {
     inputFile = getPath("src/test/resources/alephseq/alephseq-example3.txt");
     outputDir = getPath("src/test/resources/output");
-    /*
-    outputFiles = Arrays.asList(
-      "libraries.csv",
-      "libraries003.csv",
-      "marc-elements.csv",
-      "packages.csv"
-    );
-     */
+    outputFiles = List.of("marc-history.csv");
+    for (String outputFile : outputFiles) {
+      File file = new File(outputDir, "marc-history.csv");
+      if (file.exists())
+        file.delete();
+    }
   }
 
   @Test
@@ -59,7 +57,6 @@ public class FormatterTest extends CliTestUtils {
   @Test
   public void formatter_pica() throws Exception {
     File file = new File(outputDir, "marc-history.csv");
-    System.err.println(file.getCanonicalPath());
     assertFalse(file.exists());
 
     Formatter processor = new Formatter(new String[]{
@@ -78,5 +75,6 @@ public class FormatterTest extends CliTestUtils {
     List<String> content = FileUtils.readLinesFromFile(file.getCanonicalPath());
     assertEquals(List.of("001A$0,011@$a", "861106,1985", "861106,1986", "861106,1986", "861106,1981", "861106,1982", "861106,1981"), content);
     file.delete();
+    assertFalse(file.exists());
   }
 }
